# wechat-llm-proxy

./: .gitignore  README.md  pyproject.toml
config/: config.example.yaml  config.yaml
src/: config.py  main.py
src/core/: chunker.py  router.py  session.py
src/llm/: anthropic_native.py  base.py  openai_compat.py  tools.py
src/utils/: logger.py  seen_users.py
src/wechat/: auth.py  client.py  media.py  poller.py  sender.py
tests/: test_phase2_core.py  test_wechat_client.py
